[package]
name = "scirs2-datasets"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Datasets module for SciRS2 (scirs2-datasets)"
license.workspace = true
repository.workspace = true
keywords = ["datasets", "machine-learning", "data", "scientific", "scipy"]
categories = ["science", "data-structures", "algorithms"]

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies - ALL numeric/array/random functionality from scirs2-core (SciRS2 POLICY)
scirs2-core = { workspace = true, features = ["cache", "random", "gpu", "parallel", "array"] }
thiserror = { workspace = true }
num_cpus = { workspace = true }

# Data handling
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
statrs = { workspace = true }

# Datasets specific dependencies
reqwest = { workspace = true, optional = true, features = ["stream"] }
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["time"] }
dirs = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
download = ["reqwest", "futures-util", "tokio"]
parallel = ["scirs2-core/parallel"]