[package]
name = "scirs2-fft"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fast Fourier Transform module for SciRS2 (scirs2-fft)"
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords = ["fft", "fourier", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[features]
# NOTE: Pure Rust by default - OxiFFT provides high-performance Pure Rust FFT
default = ["helper", "window", "parallel", "oxifft"]
helper = []
window = []
minimal = []
parallel = []
simd = [] # SIMD acceleration support
oxifft = ["dep:oxifft"] # Pure Rust FFT backend (default)
rustfft-backend = ["dep:rustfft"] # Optional RustFFT backend
serde = [] # Serialization support
cuda = [] # Optional CUDA support for GPU acceleration (dependencies disabled)
hip = [] # Optional ROCm/HIP support for AMD GPU acceleration
sycl = [] # Optional SYCL support for cross-platform GPU acceleration
never = [] # Used to conditionally disable tests during development
python = ["scirs2-core/python"] # Python bindings support

[lints]
workspace = true
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
# Core dependencies - ALL numeric/array/random functionality from scirs2-core (SciRS2 POLICY)
thiserror = { workspace = true }
scirs2-core = { workspace = true, features = ["simd", "parallel", "gpu", "validation", "random", "array"] }

# FFT specific dependencies
# OxiFFT - Pure Rust high-performance FFT (FFTW-compatible algorithms) - DEFAULT
oxifft = { workspace = true, optional = true }

# RustFFT - Optional backend (feature-gated for Pure Rust policy)
rustfft = { workspace = true, default-features = false, optional = true }

# Serialization dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# System info and benchmarking
num_cpus = { workspace = true }
tempfile = { workspace = true }

# CUDA dependencies (optional) - temporarily disabled
# cudarc = { version = "0.12", optional = true, features = ["driver", "runtime", "cublas", "curand"] }
# cufft = { version = "0.3", optional = true } # Temporarily disabled - version not available

# ROCm/HIP dependencies (optional) - temporarily disabled  
# hiprt = { version = "0.2", optional = true }
# rocblas = { version = "0.2", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotly = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "fft_benchmarks"
harness = false
required-features = ["rustfft-backend"]

[[bench]]
name = "scipy_comparison"
harness = false

[[example]]
name = "plan_cache_example"
required-features = ["rustfft-backend"]

[[example]]
name = "benchmark_simple"
required-features = ["rustfft-backend"]

[[example]]
name = "memory_usage_benchmarking"
required-features = ["rustfft-backend"]
